resize footer and fix home spacing

--- a/src/App.sass
+++ b/src/App.sass
@@ -19,6 +19,7 @@ $text-strong: inherit
 // Update some of Bulma's component variables
 $body-background-color: #f2f2f2
 $control-border-width: 2px
+$footer-padding: 1.5rem
 
 $input-background-color: #f7f7f7
 $input-shadow: none
